--- a/_posts/2021-04-19-Essay1.md
+++ b/_posts/2021-04-19-Essay1.md
@@ -9,7 +9,7 @@ last_modified_at: 2021-04-12
 ---
 - '디지털 트렌스포메이션 시대의 스마트 워킹과 기업문화' 특강을 듣고...
 
-- 이번 문화의 날에서 김태원 전무님이 해주신 김태원 구글 글로벌 비즈니스 전무의 <디지털 트렌스포메이션 시대의 스마트 워킹과 기업문화> 특강은 새로운 시대에 따른 글로벌 기업들의 변화를 인상깊게 봤다. 기술 발전이 가속됨에 따라, 기존과 다른 새로운 기술이 기업에서 사용되고 있고 실무자들의 업무 효율을 향상시키기 위해서 그리고 매출을 늘리기 위해서 다양한 방법을 시도하고 있다. 이중 가장 인상 깊게 들은 'File vs Link' 라는 주제로 에세이를 작성하려고 한다.
+- 이번 문화의 날에서 김태원 전무님이 해주신 김태원 구글 글로벌 비즈니스 전무의 '디지털 트렌스포메이션 시대의 스마트 워킹과 기업문화' 특강은 새로운 시대에 따른 글로벌 기업들의 변화를 인상깊게 봤다. 기술 발전이 가속됨에 따라, 기존과 다른 새로운 기술이 기업에서 사용되고 있고 실무자들의 업무 효율을 향상시키기 위해서 그리고 매출을 늘리기 위해서 다양한 방법을 시도하고 있다. 이중 가장 인상 깊게 들은 'File vs Link' 라는 주제로 에세이를 작성하려고 한다.
 
 - Microsoft Office는 문서 작성 도구로 컴퓨터를 접하는 세계 모든 사람들이 사용한다. 하지만 정보의 공유가 어려운 '파일'이라는 한계로 정보의 공유가 중요한 현재 시대에는 적합하지 않다. 이러한 한계를 벗어나 문서 작성을 '파일' 단위에서 '링크' 단위로 변경한 기업 중 하나로 구글이 있다. 구글 '문서', '스프레드시트', '프레젠테이션'은 정보 공유를 '파일'이 아닌 '링크'로 변화하였고 이는 문서 작성의 새로운 변화를 주도하였다고 생각한다.
  '링크'가 주는 공유와 접근의 편의성은 '파일'을 사용과 비교할 수 없을 정도로 큰 매력으로 다가왔다. 우선 USB에 매번 '파일'을 저장해야 하는 불편함이 사라졌다. 데스크탑과 모바일 즉 웹과 앱의 제한없이 접근하여 수정하는 편리함은 구글 문서 도구를 사용하는 가장 큰 계기가 되었다. '파일'과 다르게 동시에 많은 사용자의 편집을 지원하는 기능은 동시에 여러 명의 사용자가 접근이 불가능한 '파일'에서는 쉽게 활용할 수 없는 기능이다.
