--- a/_posts/2020-04-22-Eclipse2.md
+++ b/_posts/2020-04-22-Eclipse2.md
@@ -7,3 +7,26 @@ categories:
 
 last_modified_at: 2020-04-22
 ---
+- Eclipse(STS)를 사용할 때 선택적으로 사용하는 설정을 소개한다.
+
+
+
+## 개발 환경
+- Windows 10 64bit
+- jdk1.8.0_241
+- Spring Tools 4 for Eclipse
+
+
+
+## Javascript 및 JQuery 자동 완성 플러그인 설치
+- Javascript 및 JQuery 자동 완성 플로그인이다. 2016년 11월 이후로 업데이트가 되고 있지 않기에 추천하지 않지만 플러그인은정상적으로 작동한다.
+
+출처: <https://github.com/thymeleaf/thymeleaf-extras-eclipse-plugin>
+
+
+
+## 프로젝트 생성 메뉴 변경
+- Window -> Perspective -> Customize Perspective -> Shortcuts
+
+
+
