--- a/_posts/2020-04-22-Eclipse2.md
+++ b/_posts/2020-04-22-Eclipse2.md
@@ -30,3 +30,31 @@ last_modified_at: 2020-04-22
 
 
 
+## Java, JavaScript 주석 내의 코드 자동 정렬 해제
+- Windows ->  Preference -> Java, JavaScript -> Code Style -> Formatter -> New -> 새로운 사용자 등록 -> Edit -> Comments -> Enable ~ Comment formatting 해제(사용자 설정에 따라서 변경)
+
+
+
+## HTML 자동 정렬되는 코드 폭 기준 설정
+- Window -> Preperences -> Web -> HTML Files -> Editor -> Line Width : 999 수정, Align final bracket… 체크
+
+
+
+## CSS 자동 정렬되는 코드 폭 기준 설정
+- Window -> Preperences -> Web -> HTML Files -> Editor -> Line Width : 999 수정
+
+
+
+## XML 자동 정렬되는 코드 폭 기준 설정
+- Window -> Preference -> XML -> Editor -> Line Width : 999 수정, Align final bracket... 체크
+
+
+
+## 'import '패키지'.*' 로 변경
+- import 되는 패키지를 상위 패키지로 대신하여 코드 라인을 줄일 수 있다.
+- Window -> Preference -> Java -> Code Style -> Organize imports -> Number of imports needed for.*, Number of static imports needed for.* 99 -> 1로 변경
+
+
+
+## 같은 변수, 메소드 선택시 색 반전
+- 상단 메뉴바 -> Window -> Preferences -> General -> Editors -> Text Editors -> Annotations 또는 Annotation types -> Occurrences, JavaScript Occurrences 선택 -> Show in -> Text as 체크 ->  Highlighted -> Color 선택
