--- a/_posts/2020-02-15-VxWorks2.md
+++ b/_posts/2020-02-15-VxWorks2.md
@@ -19,3 +19,36 @@ last_modified_at: 2020-02-16
 - Wind River Workbench 내에서 기본적으로 BSP를 제공하지 않는 보드를 사용하기 위해서는 BSP를 다운받고 이에 따른 설치 및 설정이 필요하다.
 - 필자는 Sabre Lite 보드를 사용하였다. 따라서 해당 보드 기준으로 설치 및 설정을 설명한다.
 
+
+
+
+
+
+### 2. 'Freescale i.mx6 Sabre Lite' 검색 후, VxWorks 6.9에 해당하는 보드의 BSP 다운로드
+
+![image](/assets/images/2020-02-15-VxWorks/image1.png)
+
+
+### 3. 다운로드 받은 파일의 압축을 해제한 다음 폴더 이동
+- 'C\Wind River\updates'(Wind River Workbench가 설치된 경로)로 이동한다.
+
+![image](/assets/images/2020-02-15-VxWorks/image2.png)
+
+
+### 4. 'Product Maintenace' 실행
+![image](/assets/images/2020-02-15-VxWorks/image3.png)
+
+
+### 5. 'Patch' 클릭
+![image](/assets/images/2020-02-15-VxWorks/image4.png)
+
+
+### 6. 'BSP_fsl_imx6_sabrelite' patch 설치
+
+![image](/assets/images/2020-02-15-VxWorks/image5.png)
+
+
+### 7. Wind River Workbench 재시작 후 프로젝트 생성할 때 'Board support pacakge'에서 설치한 'imx6_sabrelite' 선택 가능
+- BSP 선택 후 프로젝트를 생성하면 Sabre Lite 보드에서 실행되는 애플리케이션을 빌드할 수 있다.
+
+![image](/assets/images/2020-02-15-VxWorks/image6.png)
