--- a/_posts/2020-02-15-VxWorks2.md
+++ b/_posts/2020-02-15-VxWorks2.md
@@ -22,7 +22,6 @@ last_modified_at: 2020-02-16
 
 
 ## VxWorks 6.9.2.3 서피스 팩 업데이트
-다운로드 URL: <https://knowledge.Wind River.com/en-us/000_Products/000/020/010/000/000_Update_Pack_3_for_VxWorks_6.9_and_VxWorks_Edition_6.9_Platforms>
 
 - "DVD-R147826.1-14-00_part2of1.zip, DVD-R147826.1-14-00_part2of2.zip" 파일을 같은 폴더에 압축을 푼다.
 - 압축을 푸면 DVD-R147826.1-14-00 폴더에 설치 파일 생성된다.
@@ -30,7 +29,8 @@ last_modified_at: 2020-02-16
 
 
 
-
+## BSP 설치 절차
+### 1. <https://marketplace.Wind River.com/index.php?bsp> 접속
 
 
 ### 2. 'Freescale i.mx6 Sabre Lite' 검색 후, VxWorks 6.9에 해당하는 보드의 BSP 다운로드
