--- a/_posts/2020-02-15-VxWorks2.md
+++ b/_posts/2020-02-15-VxWorks2.md
@@ -30,7 +30,7 @@ last_modified_at: 2020-02-16
 
 
 ## BSP 설치 절차
-### 1. <https://marketplace.Wind River.com/index.php?bsp> 접속
+### 1. 'https://marketplace.Wind River.com/index.php?bsp' 접속
 
 
 ### 2. 'Freescale i.mx6 Sabre Lite' 검색 후, VxWorks 6.9에 해당하는 보드의 BSP 다운로드
