--- a/_posts/2020-02-15-VxWorks2.md
+++ b/_posts/2020-02-15-VxWorks2.md
@@ -26,9 +26,10 @@ last_modified_at: 2020-02-16
 - 압축을 푸면 DVD-R147826.1-14-00 폴더에 설치 파일 생성된다.
 - 모든 설정을 기본 값으로 설정한 다음 업데이트를 한다.
 
-다운로드 URL: <https://knowledge.Wind River.com/en-us/000_Products/000/020/010/000/000_Update_Pack_3_for_VxWorks_6.9_and_VxWorks_Edition_6.9_Platforms>
 
 
+## BSP 설치 절차
+### 1. 'https://marketplace.Wind River.com/index.php?bsp' 접속
 
 
 ### 2. 'Freescale i.mx6 Sabre Lite' 검색 후, VxWorks 6.9에 해당하는 보드의 BSP 다운로드
