--- a/_posts/2020-06-24-MISRAC7.md
+++ b/_posts/2020-06-24-MISRAC7.md
@@ -11,7 +11,7 @@ last_modified_at: 2020-06-24
 - 본 글에서는 MISRA C: 2012_02_04 규칙을 소개한다.
 - 태그(struct, union, enum)를 올바르게 typedef로 정의하는 방법을 소개한다.
 
-- 다음과 같이 <태그이름>을 사용하여 typedef를 정의할 수 있다.
+- 다음과 같이 '태그이름' 을 사용하여 typedef를 정의할 수 있다.
 
 ```c
 typedef <태그> <태그이름> {
