--- a/_posts/2020-06-24-MISRAC7.md
+++ b/_posts/2020-06-24-MISRAC7.md
@@ -11,15 +11,15 @@ last_modified_at: 2020-06-24
 - 본 글에서는 MISRA C: 2012_02_04 규칙을 소개한다.
 - 태그(struct, union, enum)를 올바르게 typedef로 정의하는 방법을 소개한다.
 
-- 다음과 같이 '태그이름' 을 사용하여 typedef를 정의할 수 있다.
+- 다음과 같이 '태그이름'을 사용하여 typedef를 정의할 수 있다.
 
 ```c
-typedef <태그> <태그이름> {
+typedef <태그> '태그이름' {
        	<자료형> <멤버이름>;
 }<타입이름>;
 ```
 
-- 그러나 <태그이름>은 typdef 선언시 사용되지 않기에 MISRA_C_2012_02_04 규칙(사용하지 않는 tag(struct, union, enum) 선언은 없어야 한다)을 위배하게 된다. 다음과 같은 방법으로 <태그이름>을 사용하지 않고 태그를 typedef를 정의하면 해당 규칙 위배를 피할 수 있다.
+- 그러나 '태그이름'은 typdef 선언시 사용되지 않기에 MISRA_C_2012_02_04 규칙(사용하지 않는 tag(struct, union, enum) 선언은 없어야 한다)을 위배하게 된다. 다음과 같은 방법으로 '태그이름'을 사용하지 않고 태그를 typedef를 정의하면 해당 규칙 위배를 피할 수 있다.
 
 ```c
 typedef <태그> {
