--- a/_posts/2022-01-19-Project Lab28.md
+++ b/_posts/2022-01-19-Project Lab28.md
@@ -1,4 +1,4 @@
----
+<!-- ---
 title: "Project Lab 28. 추가 개발 및 유지보수 - 2"
 excerpt: "추가 개발 및 유지보수 현황을 소개한다."
 categories:
@@ -26,4 +26,4 @@ layout: post
 
 
 ### 버그 수정: 관리자 introduction 개행 문자 출력 오류
-- 관리자 introduction read 페이지에서 개행 문자가 출력되지 않는 오류 수정
+- 관리자 introduction read 페이지에서 개행 문자가 출력되지 않는 오류 수정 -->
