--- a/_posts/2022-01-19-Project Lab28.md
+++ b/_posts/2022-01-19-Project Lab28.md
@@ -16,12 +16,10 @@ layout: post
 - 이에 따른 모바일 페이지 레이아웃 또한 변경
 
 - 수정 전
-![image](/assets/img/2022-01-19-Project Lab28/image1.png)
-
+![image](/assets/img/2022-01-19-Project Lab28/image1.jpg)
 
 - 수정 후
-![image](/assets/img/2022-01-19-Project Lab28/image1.png)
-
+![image](/assets/img/2022-01-19-Project Lab28/image1.jpg)
 
 
 
