--- a/_posts/2021-06-16-Project Lab23, 26.md
+++ b/_posts/2021-06-16-Project Lab23, 26.md
@@ -1,13 +1,13 @@
 ---
-title: "Project Lab 23, 26. 개발 및 운영 서버 배포 - 1"
-excerpt: "- 개발 서버 및 운영 서버에 배포하는 과정을 소개한다."
+title: "Project Lab 23, 26. 개발 및 운영 서버 배포 및 후기 - 1"
+excerpt: "- 개발 서버 및 운영 서버에 배포하는 과정과 후기를 소개한다."
 categories:
   - Web
   - Project Lab
 last_modified_at: 2021-06-16
 layout: post
 ---
-- 개발 서버 및 운영 서버에 배포하는 과정을 소개한다.
+- 개발 서버 및 운영 서버에 배포하는 과정과 후기를 소개한다.
 
 
 
