--- a/_posts/2022-02-23-Project Lab29.md
+++ b/_posts/2022-02-23-Project Lab29.md
@@ -13,4 +13,4 @@ layout: post
 
 ### 버그 수정: 관리자 album 해시태그 비정상 작동
 - 관리자 album 페이지에서 해시태그가 정상적으로 작동되지 않는 오류 수정
-- 해시태그 오류는 사용자 album 페이지에 영향을 미침
+- 사용자 album 페이지에 메인 해시태그가 중복되어 출력되는 것을 확인하였으며, 이를 통해서 album 페이지 해시태그 로직이 잘못된 것을 확인함
