--- a/_posts/2020-06-24-MISRAC7.md
+++ b/_posts/2020-06-24-MISRAC7.md
@@ -1,6 +1,6 @@
 ---
-title: "MISRA C: 2012_02_04 사용하지 않는 tag(struct, union, enum) 선언은 없어야 한다."
-excerpt: "MISRA C: 2012_02_04 규칙을 소개한다."
+title: "MISRA_C_2012_02_04 사용하지 않는 tag(struct, union, enum) 선언은 없어야 한다."
+excerpt: "MISRA_C_2012_02_04 규칙을 소개한다."
 
 categories:
   - MISRA C
@@ -8,8 +8,10 @@ categories:
 
 last_modified_at: 2020-06-24
 ---
-- 본 글에서는 MISRA C: 2012_02_04 규칙을 소개한다.
+- MISRA_C_2012_02_04 규칙을 소개한다.
 - 태그(struct, union, enum)를 올바르게 typedef로 정의하는 방법을 소개한다.
+
+
 
 - 다음과 같이 '태그이름'을 사용하여 typedef를 정의할 수 있다.
 
