--- a/_posts/2020-06-17-MISRAC6.md
+++ b/_posts/2020-06-17-MISRAC6.md
@@ -1,17 +1,17 @@
 ---
-title: "MISRA C: 2012_02_02 Dead code가 있어서는 안된다."
-excerpt: "MISRA C: 2012_02_02 규칙을 소개한다."
+title: "MISRA_C_2012_02_02 Dead code가 있어서는 안된다."
+excerpt: "MISRA_C_2012_02_02 규칙을 소개한다."
 categories:
   - MISRA C
   - SW Test
 last_modified_at: 2020-06-17
 layout: post
 ---
-- 본 글에서는 MISRA C: 2012_02_02 규칙을 소개한다.
+- MISRA_C_2012_02_02 규칙을 소개한다.
 
 
 
-- Dead code는 프로그램 소스 코드에 존재하고 실행도 되지만 그 결과가 사용되지 않는 코드를 가리킨다. 
+- Dead code는 프로그램 소스 코드에 존재하고 실행도 되지만 그 결과가 사용되지 않는 코드를 가리킨다.
 - Dead code는 실행 가능한 코드이며 제거하여도 프로그램 실행에 영향을 주지 않지만 프로그램 로직에서 에러를 발생시킬 수 있다.
 - 언어 확장에 의한 연산은 항상 프로그램 동작에 영향이 있다고 가정하기에, dead code로 보지 않는다. 예를 들어 언어 확장인 __asm 키워드는 함수 호출이 아니므로 dead code가 아니다.
 - void 형변환은 명시적으로 사용되지 않는 값으로 형변환하기에, dead code가 아니다. 따라서 이러한 피연산자를 사용하는 경우도 dead code가 아니다.
