--- a/_posts/2020-02-17-VxWorks4.md
+++ b/_posts/2020-02-17-VxWorks4.md
@@ -35,11 +35,11 @@ layout: post
 ### 3. test.c 파일 생성 후 build
 - New -> File -> 하단의 예제 파일 생성 -> Build
 
-```
-$ test.c
-```
+
 
 ```c
+<test.c>
+
 #include <taskLib.h>
 #include <stdio.h>
 #include <kernelLib.h>
