--- a/_posts/2020-02-16-VxWorks3.md
+++ b/_posts/2020-02-16-VxWorks3.md
@@ -1,7 +1,7 @@
 ---
 title: "Sabre Lite에 VxWorks Booting"
 excerpt: "Sabre Lite에 VxWorks 6.9 Booting 명령어 및 자동 부팅 환경 변수 등록한다."
-categories: 
+categories:
   - RTOS
 last_modified_at: 2020-02-16
 layout: post
@@ -17,7 +17,7 @@ layout: post
 
 
 ## 부팅 명령어
-```
+```bash
 $ fatload mmc 1 0x10100000 vxWorks.bin
 $ go 10100000
 ```
@@ -25,7 +25,7 @@ $ go 10100000
 
 
 ## U-Boot vxWorks.bin 파일 자동 부팅 명령어 설정
-```
+```bash
 # 환경 변수 정의
 $ setenv go 'fatload mmc 1 0x10100000 vxWorks.bin;go 10100000'
 
