--- a/_posts/2020-02-18-Linux1.md
+++ b/_posts/2020-02-18-Linux1.md
@@ -1,7 +1,7 @@
 ---
 title: "리눅스 커널 빌드 - 환경 구축"
 excerpt: "리눅스 커널 빌드 환경을 우분투에서 구축한다."
-categories: 
+categories:
   - Linux
 last_modified_at: 2020-02-18
 layout: post
@@ -18,7 +18,7 @@ layout: post
 ## 리눅스 커널 빌드 환경 구축
 - 해당 라이브러리를 설치를 진행하면, 리눅스 커널 빌드 환경이 구축된다.
 
-```
+```bash
 # 커널 빌드시 필요한 기본 라이브러리(dpkg-dev, g++, gcc, libc6-dev, make)
 $ sudo apt-get install -y build-essential
 
@@ -26,7 +26,7 @@ $ sudo apt-get install -y build-essential
 $ sudo apt-get install -y bc
 
 # ncurses(TUI, Text User Interface) 라이브러리
-$ sudo apt-get install -y libncurses5-dev 
+$ sudo apt-get install -y libncurses5-dev
 
 # ssh 라이브러리
 $ sudo apt-get install -y libssl-dev
