--- a/_posts/2020-02-20-Linux4.md
+++ b/_posts/2020-02-20-Linux4.md
@@ -24,14 +24,14 @@ layout: post
 
 
 ## 리눅스 커널 다운로드
-```
+```bash
 $ git clone https://github.com/boundarydevices/linux-imx6.git
 $ cd linux-imx6
 ```
 
 
 ## 리눅스 커널 빌드
-```
+```bash
 # 컴파일 의존성 삭제
 # mrproper + remove editor backup and patch files
 $ sudo make distclean
@@ -63,14 +63,14 @@ $ make -C ubuntunize tarball
 
 ![image](/assets/img/2020-02-20-Linux4/image1.png)
 
-```
+```bash
 $ cd ..
 ```
 
 ## galcore 다운로드 & 빌드
 - GPU를 가속하는 커널 모듈로서, 커널 버전이 4.1.15 이상인 경우 galcore 패키지를 무조건 빌드해야한다. 따라서 해당 리눅스 커널 버전은 galcore 패키지를 빌드 후 설치해야한다.
 
-```
+```bash
 $ cd ~
 $ git clone https://github.com/Freescale/kernel-module-imx-gpu-viv.git
 $ cd kernel-module-imx-gpu-viv
@@ -88,7 +88,7 @@ $ cd ..
 
 
 ## 타겟보드로 리눅스 커널 모듈 전송 후 설치
-```
+```bash
 # scp를 사용하여 타겟으로 파일 전송
 # ex) sudo scp -r /home/sdy/linux-imx6/ubuntunize/linux-4.9.88-g141b36cf3e0b-dirty.tar.gz  ubuntu@168.188.127.40:/home
 $ sudo scp -r /home/<username>/linux-imx6/ubuntunize/linux-<version> ubuntu@<ip>:/home
