--- a/_posts/2020-02-21-Linux5.md
+++ b/_posts/2020-02-21-Linux5.md
@@ -22,7 +22,7 @@ layout: post
 
 
 ## 리눅스 커널 다운로드
-```
+```bash
 # 커널 다운로드, .xz 확장자 : 뛰어난 압축률
 $ wget https://kernel.org/pub/linux/kernel/v4.x/linux-4.14.87.tar.xz
 
@@ -35,7 +35,7 @@ $ tar -xvJf linux-4.14.87.tar.xz
 ## PREEMPT_RT 패치 다운로드 및 적용
 - PREEMPT_RT 패치는 리눅스의 실시간성을 개선하는 패치로서, 패치 적용 여부는 선택사항이다.
 
-```
+```bash
 $ wget http://cdn.kernel.org/pub/linux/kernel/projects/rt/4.14/patch-4.14.87-rt49.patch.xz
 
 # PREEMPT_RT 패치 진행
@@ -47,7 +47,7 @@ $ cd ..
 
 
 ## PREEMPT_RT 패치가 적용된 리눅스 커널 빌드
-```
+```bash
 # 디렉토리명 변경
 $ mv linux-4.14.87 linux-4.14.87-rt49
 $ cd linux-4.14.87-rt49
@@ -90,7 +90,7 @@ $ CONFIG_DEBUG_RT_MUTEXES = n
 
 출처: <https://wiki.linuxfoundation.org/realtime/documentation/howto/applications/preemptrt_setup>
 
-```
+```bash
 # 모듈 삽입시 insmod: can't insert '.ko': invalid module 발생하는 오류는 커널 버전과 모듈 버전이 일치하지 않는 경우
 # 해당 문제를 해결하기 위해 해당 옵션을 해제
 $ CONFIG_LOCALVERSION_AUTO = n
@@ -98,7 +98,7 @@ $ CONFIG_LOCALVERSION_AUTO = n
 
 출처: <https://zinlee.tistory.com/entry/kernel-insmod-cant-insert-ko-invalid-module-format-%ED%95%B4%EA%B2%B0%EB%B0%A9%EB%B2%95%EC%9B%90%EC%9D%B8-%EC%9D%B4%EC%9C%A0>
 
-```
+```bash
 # 커널 설정을 종료한 다음 모듈 디렉토리 생성
 $ mkdir modules
 
@@ -118,7 +118,7 @@ $ make modules_install
 
 
 ## 리눅스 커널 부팅에 필요한 파일 정리
-```
+```bash
 $ cd modules
 $ mkdir boot
 
@@ -142,7 +142,7 @@ $ ls -al
 
 ![image](/assets/img/2020-02-21-Linux5/image1.png)
 
-```
+```bash
 # scp를 사용하여 타겟으로 파일 전송
 # ex) sudo scp -r /home/sdy/linux-4.14.87-rt49/modules/linux-4.14.87-rt49.tar.gz ubuntu@168.188.127.63:/home
 $ sudo scp -r /home/<username>/linux-4.14.87-rt49/modules/linux-4.14.87-rt49.tar.gz ubuntu@<ip>:/home
@@ -151,7 +151,7 @@ $ sudo scp -r /home/<username>/linux-4.14.87-rt49/modules/linux-4.14.87-rt49.tar
 
 
 ## 타겟에 리눅스 커널 설치
-```
+```bash
 # 처음 리눅스 커널 변경할 때 한 번만 실행
 $ sudo apt-get purge -y linux-boundary-* linux-header-* linux-image-* qcacld-module
 
@@ -173,7 +173,7 @@ $ uname -a
 ## rt-tests(real-time task latency 측정)
 - 리눅스의 실시간성을 측정하는 테스트다. PREEMPT_RT 패치를 적용하지 않은 경우보다 최대 latency와 평균 latency가 개선된 것을 확인할 수 있다.
 
-```
+```bash
 $ git clone git://git.kernel.org/pub/scm/utils/rt-tests/rt-tests.git
 $ cd rt-tests
 $ git checkout stable/devel/v1.0.1
