--- a/_posts/2020-02-22-Linux6.md
+++ b/_posts/2020-02-22-Linux6.md
@@ -20,22 +20,20 @@ layout: post
 
 
 ## 시스템 호출 파일이 위치하는 디렉터리 생성
-```
+```bash
 # 다운받은 리눅스 커널 경로로 이동
 $ cd ~/<linux kernel path>
 
-# 시스템 호출 디렉터리 생성 
+# 시스템 호출 디렉터리 생성
 $ mkdir syscall_dev
 ```
 
 
 
 ## 사용자 정의 시스템 콜 구현
-```
-$ vi syscall_dev/test.c 
-```
-
 ```c
+<syscall_dev/test.c>
+
 #include <linux/kernel.h>
 
 asmlinkage void sys_call(void)
@@ -49,11 +47,9 @@ asmlinkage void sys_call(void)
 ## syscall_dev 디렉터리의 Makefile 작성
 - make할 때 syscall_dev 디렉터리 내부의 파일이 컴파일 되도록 한다.
 
-```
-$ vi syscall_dev/Makefile
-```
-
 ```c
+<syscall_dev/Makefile>
+
 obj-y := test.o
 ```
 
@@ -62,27 +58,23 @@ obj-y := test.o
 ## 커널 Makefile에 syscall_dev 파일 추가
 - make할 때 syscall_dev 디렉터리가 컴파일 되도록 된다.
 
-```
-$ vi Makefile
-```
-
 ```c
+<Makefile>
+
 /* 약 969 라인에 위치 */
 기존 : core-y      += kernel/ certs/ mm/ fs/ ipc/ security/ crypto/ block/
 변경 : core-y      += kernel/ certs/ mm/ fs/ ipc/ security/ crypto/ block/ syscall_dev/
 ```
 
 
-## 시스템 콜 처리 함수 등록 
+## 시스템 콜 처리 함수 등록
 - 커널에 등록된 마지막 시스템 호출에 사용자가 구현한 시스템 콜을 추가한다.
 
-```
-$ vi arch/arm/tools/syscall.tbl
-```
-
 ```c
+<arch/arm/tools/syscall.tbl>
+
 397 common  statx           sys_statx
-# 시스템 콜 추가 
+# 시스템 콜 추가
 398 common  sys_call            sys_call
 ```
 
@@ -91,11 +83,9 @@ $ vi arch/arm/tools/syscall.tbl
 ## 애플리케이션 시스템 콜 호출
 - 애플리케이션에서 등록한 398번 시스템 콜을 호출한다.
 
-```
-$ vi test.c
-```
-
 ```c
+<test.c>
+
 #include <stdio.h>
 #include <linux/kernel.h>
 #include <sys/syscall.h>
@@ -104,14 +94,14 @@ $ vi test.c
 int main()
 {
   syscall(398);
-         
+
   return 0;
-} 
+}
 ```
 
 <br>
 -  커널 메시지 출력 명령어를 통하여, 398번 시스템 호출 메시지인 "Hello World!"을 확인 할 수 있다.
-```
+```bash
 $ dmesg | tail
 ```
 
