--- a/_posts/2020-03-07-Putty1.md
+++ b/_posts/2020-03-07-Putty1.md
@@ -67,7 +67,7 @@ layout: post
 - 원격 서버에 SSH로 접속 하는 경우, id와 pw를 입력해야한다.
 - 매번 입력하는 사용자 정보를 미리 등록하여, 별도의 정보 입력없이 자동으로 로그인하도록 설정한다.
 
-```
+```bash
 # 모두 다 엔터를 눌러 기본 설정으로 키 생성
 $  ssh-keygen -t rsa
 
