--- a/_posts/2020-04-22-Eclipse3.md
+++ b/_posts/2020-04-22-Eclipse3.md
@@ -25,9 +25,8 @@ last_modified_at: 2020-04-22
 ![image](/assets/images/2020-04-22-Eclipse3/image3.png)
 
 ```
-$settings.gradle
-```
-```
+<settings.gradle>
+
 // 현재 프로젝트 명은 'Test' 이므로 'Test'로 변경해야 한다.
 rootProject.name = 'Test'
 ```
