--- a/_posts/2020-04-26-VMWare1.md
+++ b/_posts/2020-04-26-VMWare1.md
@@ -17,52 +17,50 @@ layout: post
 
 
 ## VMware Service 수동시작
-- 윈도우를 부팅하면 VMware 네트워크 서비스가 자동으로 시작된다. 이를 수동으로 변경하고 VMWare 네트워크 서비스 시작 cmd 파일을 수동으로 실행하면 윈도우 부팅 시간을 단축시킬 수 있다. 
+- 윈도우를 부팅하면 VMware 네트워크 서비스가 자동으로 시작된다. 이를 수동으로 변경하고 VMWare 네트워크 서비스 시작 cmd 파일을 수동으로 실행하면 윈도우 부팅 시간을 단축시킬 수 있다.
 - 윈도우 + S(검색) -> 서비스 -> VMware 서비스 검색 후 우클릭 속성 -> 시작 유형 수동으로 변경
 
-```
-$ VMWare.sh
-```
+```bash
+<VMWare.sh>
 
-```
-@echo off 
-:main 
-cls 
-echo. 
-echo	[ VMware 서비스 ON/OFF ] 
-echo. 
-echo	1. VMware 서비스 켜기 [ON] 
-echo. 
-echo	2. VMware 서비스 끄기 [OFF] 
-echo. 
-echo	원하는 작업 번호를 입력한 다음, 엔터(Enter) 키를 눌러주세요. 
-echo	적용이 완료되면 아무 키나 눌러 종료할 수 있습니다. 
-echo. 
-set menu= 
-set /p menu=번호를 입력 후 엔터를 눌러주세요: 
-if "%menu%" == "1" goto make 
-if "%menu%" == "2" goto delete 
-goto main 
+@echo off
+:main
+cls
+echo.
+echo	[ VMware 서비스 ON/OFF ]
+echo.
+echo	1. VMware 서비스 켜기 [ON]
+echo.
+echo	2. VMware 서비스 끄기 [OFF]
+echo.
+echo	원하는 작업 번호를 입력한 다음, 엔터(Enter) 키를 눌러주세요.
+echo	적용이 완료되면 아무 키나 눌러 종료할 수 있습니다.
+echo.
+set menu=
+set /p menu=번호를 입력 후 엔터를 눌러주세요:
+if "%menu%" == "1" goto make
+if "%menu%" == "2" goto delete
+goto main
 
-:make 
-net start VMAuthdService 
-net start VMnetDHCP 
-net start "VMware NAT Service" 
-net start VMUSBArbService 
-pause 
-goto exit 
+:make
+net start VMAuthdService
+net start VMnetDHCP
+net start "VMware NAT Service"
+net start VMUSBArbService
+pause
+goto exit
 
-:delete 
-net stop VMAuthdService 
-net stop VMnetDHCP 
-net stop "VMware NAT Service" 
-net stop VMUSBArbService 
-pause 
-goto exit 
+:delete
+net stop VMAuthdService
+net stop VMnetDHCP
+net stop "VMware NAT Service"
+net stop VMUSBArbService
+pause
+goto exit
 
-:exit 
+:exit
 exit
-``` 
+```
 
 출처: <https://m.blog.naver.com/PostView.nhn?blogId=uuu181&logNo=220770686559&proxyReferer=https%3A%2F%2Fwww.google.co.kr%2F>
 
@@ -70,18 +68,18 @@ exit
 
 ## VMWare Tool 설치
 - VMWare를 편리하게 사용하고 싶다면 필수적으로 설치 해야한다.
-- 양방향 클립보드, 드래그앤 드랍, 최적화된 화면 해상도 기능들을 제공한다. 
+- 양방향 클립보드, 드래그앤 드랍, 최적화된 화면 해상도 기능들을 제공한다.
 
 
-### Ubuntu 
-```
+### Ubuntu
+```bash
 $ sudo apt-get install open-vm-tools-desktop
 ```
 
 출처: <http://kkn1220.tistory.com/109>
 
 
-### Windows 10 
+### Windows 10
 - 상단 메뉴바 -> VM -> Install VMware Tools -> VMware 가상 머신(윈도우)에서 인식되며, 이후 설치 진행
 
 
@@ -104,7 +102,7 @@ $ sudo apt-get install open-vm-tools-desktop
 
 
 ### Ubuntu
-```
+```bash
 $ sudo vmware-toolbox-cmd disk shrink /
 ```
 
