--- a/_posts/2020-07-15-Project Lab1-2.md
+++ b/_posts/2020-07-15-Project Lab1-2.md
@@ -91,10 +91,8 @@ Link: <https://spring.io/tools>
 - 애플리케이션이 응답 대기 시간이나 처리량에 민감하지 않다면 Heap 영역만  변경하고 JVM의 기본 설정을 따르는게 좋다. 애플리케이션의 응답 대기시간과 처리량은 서로 trade-off 관계다. 응답 대기시간을 감소시키면 처리량은 떨어지고 응답 대기시간이 길어지면 처리량은 증가한다. 다음과 같이 STS를 설정하였다.
 
 ```
-$ SpringToolSuite4.ini
-```
+<SpringToolSuite4.ini>
 
-```
 -startup
 plugins/org.eclipse.equinox.launcher_1.5.700.v20200207-2156.jar
 --launcher.library
@@ -162,12 +160,12 @@ C:\Users\<User>\Desktop\Spring\jdk-11.0.7\bin\javaw.exe
 
 - 이외에도, 컴파일러의 소수점 최적화 기능을 담당하는 "XX:+AggressiveOpts" 옵션을 설정 할 수 있다. 해당 옵션을 벤치마크한 글에 따르면, 벤치마크 종류에 따라 성능 변화 폭이 다르게 나타났다. 따라서 해당 옵션은 애플리케이션의 성능을 떨어뜨릴 수 있으므로 설정하지 않는다.
 
-출처: <https://unordinarydays.tistory.com/137>
-<https://dezang.github.io/configuration-of-the-eclipse/>
-<https://www.holaxprogramming.com/2017/10/09/java-jvm-performance/>
-<https://perfectacle.github.io/2019/05/11/jvm-gc-advanced/>
-<https://johngrib.github.io/wiki/jvm-memory/>
-<https://blog.voidmainvoid.net/184>
+출처: <https://unordinarydays.tistory.com/137><br>
+<https://dezang.github.io/configuration-of-the-eclipse/><br>
+<https://www.holaxprogramming.com/2017/10/09/java-jvm-performance/><br>
+<https://perfectacle.github.io/2019/05/11/jvm-gc-advanced/><br>
+<https://johngrib.github.io/wiki/jvm-memory/><br>
+<https://blog.voidmainvoid.net/184><br>
 <https://www.opsian.com/blog/aggressive-opts/>
 
 
