--- a/_posts/2020-07-18-IntelliJ1.md
+++ b/_posts/2020-07-18-IntelliJ1.md
@@ -97,10 +97,8 @@ layout: post
 - build.gradle에 'spring-boot-devtools' 의존성을 추가해야 한다.
 
 ```
-build.gradle
-```
+<build.gradle>
 
-```
 dependencies {
     ...
     runtimeOnly "org.springframework.boot:spring-boot-devtools"
@@ -113,10 +111,8 @@ dependencies {
 - application.yml에 다음 설정을 추가한다.
 
 ```
-applicatio.yml
-```
+<applicatio.yml>
 
-```
 spring:
  devtools:
    livereload:
