--- a/_posts/2020-02-19-Linux2.md
+++ b/_posts/2020-02-19-Linux2.md
@@ -1,7 +1,7 @@
 ---
 title: "리눅스 커널 빌드 - x86-64"
 excerpt: "다운받은 리눅스 커널을 빌드 후 리눅스 커널 버전을 변경한다."
-categories: 
+categories:
   - Linux
 last_modified_at: 2020-02-19
 layout: post
@@ -18,7 +18,7 @@ layout: post
 
 
 ## 리눅스 커널 다운로드
-```
+```bash
 $ mkdir kernel
 $ cd kernel
 
@@ -32,24 +32,24 @@ $ tar -xvJf linux-4.19.27.tar.xz
 
 
 ## 리눅스 커널 빌드
-```
+```bash
 $ cd linux-4.19.27
 
 # 컴파일 의존성 삭제
 # mrproper + remove editor backup and patch files
-$ sudo make distclean 
+$ sudo make distclean
 
 # 커널 설정
 $ sudo make menuconfig
 
 # 커널 컴파일, 쿼드코어 사용
-$ sudo make -j4 
+$ sudo make -j4
 ```
 
 
 
 ## 리눅스 커널 모듈 설치
-```
+```bash
 # 커널 환경설정에서 모듈로 설정한 기능들을 컴파일
 # 컴파일된 모듈은 /lib/modules 아래 설치
 # depmod: 모듈 사이의 의존성을 검사 후 /lib/modules 디렉토리 아래 modules.dep 파일 생성 후 설치
