--- a/_posts/2020-02-23-DB1.md
+++ b/_posts/2020-02-23-DB1.md
@@ -18,7 +18,7 @@ layout: post
 
 
 ## SQLite 빌드
-```
+```bash
 # 소스 코드 다운로드
 $ wget https://www.sqlite.org/2019/sqlite-autoconf-3280000.tar.gz
 $ tar xvzf sqlite-autoconf-3280000.tar.gz
@@ -27,10 +27,10 @@ $ mkdir dev
 
 # --prefix=설치 경로 입력
 # 만약 Windows 환경에서 빌드한다면 Cross Compiler를 지정해야함:   CC=arm-linux-gnueabihf-gcc
-$ ./configure --host=arm-linux --prefix=/home/ubuntu/sqlite-autoconf-3280000/dev  
+$ ./configure --host=arm-linux --prefix=/home/ubuntu/sqlite-autoconf-3280000/dev
 
-# 약 10분 정도의 시간이 소요됨 
-$ make -j4 
+# 약 10분 정도의 시간이 소요됨
+$ make -j4
 
 # 약 5분 정도의 시간이 소요됨
 $ sudo make install
