--- a/_posts/2020-02-27-Sabre Lite1.md
+++ b/_posts/2020-02-27-Sabre Lite1.md
@@ -50,7 +50,7 @@ layout: post
 - 'sb_loader.zip' 파일 압축을 해제한다.
 - cmd 창에서 압축을 해제한 'sb_loaderv1.2' 경로로 이동한 다음 하단의 명령어를 입력한다.
 
-```
+```bash
 $ cd <Path>\sb_loader.v1.2
 $ sb_loader.exe -f u-boot.nitrogen6q
 ```
@@ -72,7 +72,7 @@ $ sb_loader.exe -f u-boot.nitrogen6q
 - 전원을 연결한 다음 시리얼 포트를 통하여 출력을 확인할 수 있다.
 - run upgrade 명령어 인식 문제로 인하여, 하단 명령어를 입력하여 U-Boot 환경 변수를 삭제해야한다.
 
-```
+```bash
 $ env default -a
 $ savee
 $ setenv uboot_defconfig nitrogen6q
