--- a/_posts/2020-04-14-Xenomai1.md
+++ b/_posts/2020-04-14-Xenomai1.md
@@ -47,7 +47,7 @@ layout: post
 
 
 ## 리눅스 커널 다운로드
-```
+```bash
 # 커널 다운로드, .xz 확장자: 뛰어난 압축률
 $ wget https://kernel.org/pub/linux/kernel/v4.x/linux-4.14.85.tar.xz
 
@@ -63,7 +63,7 @@ $ tar -xvJf linux-4.14.85.tar.xz
 
 출처: <https://xenomai.org/downloads/ipipe/v4.x/arm/>
 
-```
+```bash
 # Xenomai 다운로드
 $ wget https://xenomai.org/downloads/xenomai/stable/xenomai-3.0.8.tar.bz2
 
@@ -77,7 +77,7 @@ $ wget https://xenomai.org/downloads/ipipe/v4.x/arm/ipipe-core-4.14.85-arm-6.pat
 
 
 ## Xenomai ipipe 패치 적용
-```
+```bash
 # --linux=[리눅스 코드 경로], --ipipe=[ipipe 패치 경로]
 $ ./xenomai-3.0.8/scripts/prepare-kernel.sh --arch=arm --linux=/home/sdy/linux-4.14.85 --ipipe=ipipe-core-4.14.85-arm-6.patch
 ```
@@ -89,7 +89,7 @@ $ ./xenomai-3.0.8/scripts/prepare-kernel.sh --arch=arm --linux=/home/sdy/linux-4
 
 
 ## 리눅스 커널 빌드
-```
+```bash
 $ cd linux-4.14.85
 
 # 컴파일 의존성 삭제(mrproper + remove editor backup and patch files)
@@ -119,7 +119,7 @@ $ make modules_install
 
 
 ### 리눅스 커널 부팅에 필요한 파일 정리
-```
+```bash
 $  cd modules
 $  mkdir boot
 
@@ -143,7 +143,7 @@ $ ls -al
 
 ![image](/assets/img/2020-04-14-Xenomai1/image2.png)
 
-```
+```bash
 # scp으로 타겟에 파일 전송
 # ex) sudo scp -r /home/sdy/linux-4.14.87-rt49/modules/linux-4.14.87-rt49.tar.gz ubuntu@168.188.127.63:/home
 $ sudo scp -r /home/<username>/linux-4.14.87-rt49/modules/linux-4.14.87-rt49.tar.gz ubuntu@<ip>:/home
@@ -152,7 +152,7 @@ $ sudo scp -r /home/<username>/linux-4.14.87-rt49/modules/linux-4.14.87-rt49.tar
 
 
 ## 타겟에 리눅스 커널 설치
-```
+```bash
 # 처음 리눅스 커널 변경할 때 한 번만 실행
 $ sudo apt-get purge -y linux-boundary-* linux-header-* linux-image-* qcacld-module
 
