--- a/_posts/2020-04-21-Xenomai2.md
+++ b/_posts/2020-04-21-Xenomai2.md
@@ -21,7 +21,7 @@ layout: post
 - Xenomai 라이브러리는 Cobalt 커널과 Mecury 커널 모두 사용 가능하다.
 - Mecury 커널의 경우는 Xenomai 라이브러리를 사용하여 태스크를 생성하는 경우, 리눅스 커널에서 실행디고 실시간성은 리눅스 커널에 의존한다.
 
-```
+```bash
 $ wget https://xenomai.org/downloads/xenomai/stable/xenomai-3.0.8.tar.bz2
 $ tar xfvj xenomai-3.0.8.tar.bz2
 
@@ -34,7 +34,7 @@ $ ./configure CFLAGS="-march=armv7-a -mfpu=vfp3" --with-pic --with-core=cobalt -
 
 출처: <https://gitlab.denx.de/Xenomai/xenomai/wikis/Installing_Xenomai_3>
 
-```
+```bash
 # Xenomai 라이브러리 빌드
 $ sudo make -j4
 
@@ -67,11 +67,9 @@ $ sudo /usr/xenomai/bin/latency
 - Tab 문자 적용할 때 시스템 내에서 설정된 공란(space) 크기 확인이 필요하다.
 - 해당 애플리케이션은 Xenomai에서 제공하는 자체 RTOS API인 Alchemy다.
 
-```
-$ Makefile
-```
-
 ```c
+<Makefile>
+
 XENO_CONFIG := /usr/xenomai/bin/xeno-config
 CFLAGS := (shell (XENO_CONFIG) --alchemy --cflags)
 LDFLAGS := (shell (XENO_CONFIG) --alchemy --ldflags)
@@ -85,11 +83,9 @@ start: start.c
 	(CC) -o @ < (CFLAGS) (LDFLAGS)
 ```
 
-```
-$ start.c
-```
-
 ```c
+<start.c>
+
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
@@ -159,7 +155,7 @@ int main(int argc, char **argv) {
 }
 ```
 
-```
+```bash
 # 빌드, 쿼드코어 사용
 $ make -j4
 
